# Robotics-Test-Integration-Engineer

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: conventions.md  homework.md  robotics_test_project_description.md  running_dev_container.md  valgrind_usage.md
robotics/configs/: env_vars.sh  nodes_launch.yaml  robotics.launch.py  startRobotics.sh
robotics/configs/subset/: metadata.yaml  subset_0.db3
robotics/ros2/src/interfaces/: package.xml
robotics/ros2/src/interfaces/include/modules/: speaker.hpp
robotics/ros2/src/interfaces/src/: interfaces_node.cpp
robotics/ros2/src/interfaces/src/modules/: speaker.cpp
robotics/ros2/src/lifecycle_manager/: CMakeLists.txt  README.md  package.xml
robotics/ros2/src/lifecycle_manager/include/lifecycle_manager/: lifecycle_manager.hpp
robotics/ros2/src/lifecycle_manager/src/: lifecycle_manager.cpp
robotics/ros2/src/motion_control/: CMakeLists.txt  package.xml
robotics/ros2/src/motion_control/include/motion_control/: pid_controller.hpp  soft_speed_spline.hpp  speed_controller.hpp
robotics/ros2/src/motion_control/src/: pid_controller.cpp  speed_controller.cpp
robotics/ros2/src/plotter/: package.xml  setup.cfg  setup.py
robotics/ros2/src/plotter/plotter/: plotter_node.py
robotics/ros2/src/rpm_converter/: CMakeLists.txt  package.xml
robotics/ros2/src/rpm_converter/include/rpm_converter/: rpm_converter.hpp
robotics/ros2/src/rpm_converter/src/: rpm_convertor_node.cpp
robotics/ros2/src/usr_msgs/: CMakeLists.txt  package.xml
robotics/ros2/src/usr_msgs/msg/devices/: General.msg
robotics/ros2/src/usr_msgs/msg/interfaces/: SpeakerStatus.msg
robotics/ros2/src/usr_msgs/msg/location/: LocationMsg.msg
robotics/ros2/src/usr_msgs/msg/rpm_converter/: MotorsRPM.msg
robotics/ros2/src/usr_srvs/: CMakeLists.txt  package.xml
robotics/ros2/src/usr_srvs/srv/can/: FloatValue.srv
robotics/ros2/src/wheel_odometry/: CMakeLists.txt  README.md  package.xml
robotics/ros2/src/wheel_odometry/include/wheel_odometry/: location_msg.hpp  wheel_odometry.hpp
robotics/ros2/src/wheel_odometry/src/: location_msg.cpp  wheel_odometry.cpp
