<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="camiloalvis@kiwibot.com">ada</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>usr_msgs</build_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>utils</depend>

  <exec_depend>usr_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
